--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 tokio = { version = "1.35.1", features = ["full"] }
 crc32fast = "1.3.2"
 tempfile = "3.3"
+siphasher = "0.3"
 
 [dev-dependencies]
 tempfile = "3.3"
