--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ tokio = { version = "1.35.1", features = ["full"] }
 crc32fast = "1.3.2"
 tempfile = "3.3"
 siphasher = "0.3"
+crossbeam-skiplist = "0.1"
 
 [dev-dependencies]
 tempfile = "3.3"
