--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ crc32fast = "1.3.2"
 tempfile = "3.3"
 siphasher = "0.3"
 crossbeam-skiplist = "0.1"
+rayon = "1.8"                                       # For parallel execution
+num_cpus = "1.16"                                   # For CPU core detection
 
 [dev-dependencies]
 tempfile = "3.3"
@@ -190,3 +192,11 @@ path = "tests/wal_basic_unit_test.rs"
 [[test]]
 name = "parallel_test_example"
 path = "tests/parallel_test_example.rs"
+
+[[test]]
+name = "partitioned_bloom_filter_test"
+path = "tests/partitioned_bloom_integration_test.rs"
+
+[[test]]
+name = "sstable_partitioned_bloom_test"
+path = "tests/sstable_partitioned_bloom_test.rs"
